[project]
name = "mcpenum"
version = "0.1.4"
description = "MCP server enumeration tool"
dynamic = [
    "dependencies",
]
requires-python = ">=3.11"

[tool.unidep]
channels = [
    "pytorch",
    "nvidia",
    "conda-forge",
    "defaults",
]
dependencies = [
    "accelerate",
    "aiofiles",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "altair",
    "annotated-doc",
    "annotated-types",
    "anyio",
    "aom @ file://./portable_wheels/aom-0.1.0-py3-none-any.whl",
    "archspec",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "arrow",
    "asttokens",
    "async-lru",
    "attrs",
    "aws-c-auth @ file://./portable_wheels/aws-c-auth-0.1.0-py3-none-any.whl",
    "aws-c-cal @ file://./portable_wheels/aws-c-cal-0.1.0-py3-none-any.whl",
    "aws-c-common @ file://./portable_wheels/aws-c-common-0.1.0-py3-none-any.whl",
    "aws-c-compression @ file://./portable_wheels/aws-c-compression-0.1.0-py3-none-any.whl",
    "aws-c-event-stream @ file://./portable_wheels/aws-c-event-stream-0.1.0-py3-none-any.whl",
    "aws-c-http",
    "aws-c-io @ file://./portable_wheels/aws-c-io-0.1.0-py3-none-any.whl",
    "aws-c-mqtt @ file://./portable_wheels/aws-c-mqtt-0.1.0-py3-none-any.whl",
    "aws-c-s3 @ file://./portable_wheels/aws-c-s3-0.1.0-py3-none-any.whl",
    "aws-c-sdkutils @ file://./portable_wheels/aws-c-sdkutils-0.1.0-py3-none-any.whl",
    "aws-checksums @ file://./portable_wheels/aws-checksums-0.1.0-py3-none-any.whl",
    "aws-crt-cpp @ file://./portable_wheels/aws-crt-cpp-0.1.0-py3-none-any.whl",
    "aws-sdk-cpp @ file://./portable_wheels/aws-sdk-cpp-0.1.0-py3-none-any.whl",
    "azure-core-cpp @ file://./portable_wheels/azure-core-cpp-0.1.0-py3-none-any.whl",
    "azure-identity-cpp @ file://./portable_wheels/azure-identity-cpp-0.1.0-py3-none-any.whl",
    "azure-storage-blobs-cpp @ file://./portable_wheels/azure-storage-blobs-cpp-0.1.0-py3-none-any.whl",
    "azure-storage-common-cpp @ file://./portable_wheels/azure-storage-common-cpp-0.1.0-py3-none-any.whl",
    "azure-storage-files-datalake-cpp @ file://./portable_wheels/azure-storage-files-datalake-cpp-0.1.0-py3-none-any.whl",
    "babel",
    "backports.zstd",
    "beautifulsoup4",
    "binaryornot",
    "blas @ file://./portable_wheels/blas-0.1.0-py3-none-any.whl",
    "bleach",
    "bleach-with-css @ file://./portable_wheels/bleach-with-css-0.1.0-py3-none-any.whl",
    "boltons",
    "brotli",
    "brotli-bin @ file://./portable_wheels/brotli-bin-0.1.0-py3-none-any.whl",
    "brotli-python @ file://./portable_wheels/brotli-python-0.1.0-py3-none-any.whl",
    "bzip2 @ file://./portable_wheels/bzip2-0.1.0-py3-none-any.whl",
    "c-ares @ file://./portable_wheels/c-ares-0.1.0-py3-none-any.whl",
    "cached-property",
    "cached_property",
    "cairo @ file://./portable_wheels/cairo-0.1.0-py3-none-any.whl",
    "category_encoders",
    "cccl @ file://./portable_wheels/cccl-0.1.0-py3-none-any.whl",
    "certifi",
    "cffi",
    "chardet",
    "charset-normalizer",
    "click",
    "colorama",
    "comm",
    "conda-libmamba-solver @ file://./portable_wheels/conda-libmamba-solver-0.1.0-py3-none-any.whl",
    "conda-package-handling",
    "conda-package-streaming",
    "conda-press",
    "contourpy",
    "cookiecutter",
    "cpp-expected @ file://./portable_wheels/cpp-expected-0.1.0-py3-none-any.whl",
    "cpython @ file://./portable_wheels/cpython-0.1.0-py3-none-any.whl",
    "cuda-cccl",
    "cuda-cccl_win-64 @ file://./portable_wheels/cuda-cccl_win-64-0.1.0-py3-none-any.whl",
    "cuda-cudart @ file://./portable_wheels/cuda-cudart-0.1.0-py3-none-any.whl",
    "cuda-cudart-dev @ file://./portable_wheels/cuda-cudart-dev-0.1.0-py3-none-any.whl",
    "cuda-cudart-dev_win-64 @ file://./portable_wheels/cuda-cudart-dev_win-64-0.1.0-py3-none-any.whl",
    "cuda-cudart-static @ file://./portable_wheels/cuda-cudart-static-0.1.0-py3-none-any.whl",
    "cuda-cudart-static_win-64 @ file://./portable_wheels/cuda-cudart-static_win-64-0.1.0-py3-none-any.whl",
    "cuda-cudart_win-64 @ file://./portable_wheels/cuda-cudart_win-64-0.1.0-py3-none-any.whl",
    "cuda-cupti @ file://./portable_wheels/cuda-cupti-0.1.0-py3-none-any.whl",
    "cuda-libraries @ file://./portable_wheels/cuda-libraries-0.1.0-py3-none-any.whl",
    "cuda-libraries-dev @ file://./portable_wheels/cuda-libraries-dev-0.1.0-py3-none-any.whl",
    "cuda-nvrtc @ file://./portable_wheels/cuda-nvrtc-0.1.0-py3-none-any.whl",
    "cuda-nvrtc-dev @ file://./portable_wheels/cuda-nvrtc-dev-0.1.0-py3-none-any.whl",
    "cuda-nvtx @ file://./portable_wheels/cuda-nvtx-0.1.0-py3-none-any.whl",
    "cuda-opencl @ file://./portable_wheels/cuda-opencl-0.1.0-py3-none-any.whl",
    "cuda-opencl-dev @ file://./portable_wheels/cuda-opencl-dev-0.1.0-py3-none-any.whl",
    "cuda-profiler-api @ file://./portable_wheels/cuda-profiler-api-0.1.0-py3-none-any.whl",
    "cuda-runtime @ file://./portable_wheels/cuda-runtime-0.1.0-py3-none-any.whl",
    "cuda-version @ file://./portable_wheels/cuda-version-0.1.0-py3-none-any.whl",
    "cycler",
    "dataclasses",
    "datasets",
    "dav1d @ file://./portable_wheels/dav1d-0.1.0-py3-none-any.whl",
    "debugpy",
    "decorator",
    "defusedxml",
    "dill",
    "distro",
    "dnspython",
    "double-conversion @ file://./portable_wheels/double-conversion-0.1.0-py3-none-any.whl",
    "email-validator",
    "email_validator",
    "evaluate",
    "exceptiongroup",
    "executing",
    "expat",
    "fastapi",
    "fastapi-cli",
    "fastapi-core",
    "ffmpeg",
    "ffmpy",
    "filelock",
    "fmt",
    "font-ttf-dejavu-sans-mono @ file://./portable_wheels/font-ttf-dejavu-sans-mono-0.1.0-py3-none-any.whl",
    "font-ttf-inconsolata @ file://./portable_wheels/font-ttf-inconsolata-0.1.0-py3-none-any.whl",
    "font-ttf-source-code-pro @ file://./portable_wheels/font-ttf-source-code-pro-0.1.0-py3-none-any.whl",
    "font-ttf-ubuntu @ file://./portable_wheels/font-ttf-ubuntu-0.1.0-py3-none-any.whl",
    "fontconfig",
    "fonts-conda-ecosystem @ file://./portable_wheels/fonts-conda-ecosystem-0.1.0-py3-none-any.whl",
    "fonts-conda-forge @ file://./portable_wheels/fonts-conda-forge-0.1.0-py3-none-any.whl",
    "fonttools",
    "fqdn",
    "freetype",
    "fribidi @ file://./portable_wheels/fribidi-0.1.0-py3-none-any.whl",
    "frozendict",
    "frozenlist",
    "fsspec",
    "gdk-pixbuf @ file://./portable_wheels/gdk-pixbuf-0.1.0-py3-none-any.whl",
    "glslang @ file://./portable_wheels/glslang-0.1.0-py3-none-any.whl",
    "gradio",
    "gradio-client",
    "graphite2",
    "groovy-python @ file://./portable_wheels/groovy-python-0.1.0-py3-none-any.whl",
    "h11",
    "h2",
    "harfbuzz @ file://./portable_wheels/harfbuzz-0.1.0-py3-none-any.whl",
    "hf-xet",
    "hpack",
    "httpcore",
    "httptools",
    "httpx",
    "huggingface_hub",
    "hyperframe",
    "icu",
    "idna",
    "importlib-metadata",
    "importlib_resources",
    "intel-openmp",
    "ipykernel",
    "ipython",
    "ipython_pygments_lexers",
    "ipywidgets",
    "isoduration",
    "jedi",
    "jinja2",
    "joblib",
    "json5",
    "jsonpatch",
    "jsonpointer",
    "jsonschema",
    "jsonschema-specifications",
    "jsonschema-with-format-nongpl @ file://./portable_wheels/jsonschema-with-format-nongpl-0.1.0-py3-none-any.whl",
    "jupyter",
    "jupyter-lsp",
    "jupyter_client",
    "jupyter_console",
    "jupyter_core",
    "jupyter_events",
    "jupyter_server",
    "jupyter_server_terminals",
    "jupyterlab",
    "jupyterlab_pygments",
    "jupyterlab_server",
    "jupyterlab_widgets",
    "khronos-opencl-icd-loader @ file://./portable_wheels/khronos-opencl-icd-loader-0.1.0-py3-none-any.whl",
    "kiwisolver",
    "krb5",
    "lame @ file://./portable_wheels/lame-0.1.0-py3-none-any.whl",
    "lark",
    "lazyasd",
    "lcms2 @ file://./portable_wheels/lcms2-0.1.0-py3-none-any.whl",
    "lerc",
    "libabseil @ file://./portable_wheels/libabseil-0.1.0-py3-none-any.whl",
    "libarchive",
    "libarrow @ file://./portable_wheels/libarrow-0.1.0-py3-none-any.whl",
    "libarrow-acero @ file://./portable_wheels/libarrow-acero-0.1.0-py3-none-any.whl",
    "libarrow-compute @ file://./portable_wheels/libarrow-compute-0.1.0-py3-none-any.whl",
    "libarrow-dataset @ file://./portable_wheels/libarrow-dataset-0.1.0-py3-none-any.whl",
    "libarrow-substrait @ file://./portable_wheels/libarrow-substrait-0.1.0-py3-none-any.whl",
    "libblas @ file://./portable_wheels/libblas-0.1.0-py3-none-any.whl",
    "libbrotlicommon @ file://./portable_wheels/libbrotlicommon-0.1.0-py3-none-any.whl",
    "libbrotlidec @ file://./portable_wheels/libbrotlidec-0.1.0-py3-none-any.whl",
    "libbrotlienc @ file://./portable_wheels/libbrotlienc-0.1.0-py3-none-any.whl",
    "libcblas @ file://./portable_wheels/libcblas-0.1.0-py3-none-any.whl",
    "libclang13 @ file://./portable_wheels/libclang13-0.1.0-py3-none-any.whl",
    "libcrc32c @ file://./portable_wheels/libcrc32c-0.1.0-py3-none-any.whl",
    "libcublas @ file://./portable_wheels/libcublas-0.1.0-py3-none-any.whl",
    "libcublas-dev @ file://./portable_wheels/libcublas-dev-0.1.0-py3-none-any.whl",
    "libcufft @ file://./portable_wheels/libcufft-0.1.0-py3-none-any.whl",
    "libcufft-dev @ file://./portable_wheels/libcufft-dev-0.1.0-py3-none-any.whl",
    "libcurand @ file://./portable_wheels/libcurand-0.1.0-py3-none-any.whl",
    "libcurand-dev @ file://./portable_wheels/libcurand-dev-0.1.0-py3-none-any.whl",
    "libcurl @ file://./portable_wheels/libcurl-0.1.0-py3-none-any.whl",
    "libcusolver @ file://./portable_wheels/libcusolver-0.1.0-py3-none-any.whl",
    "libcusolver-dev @ file://./portable_wheels/libcusolver-dev-0.1.0-py3-none-any.whl",
    "libcusparse @ file://./portable_wheels/libcusparse-0.1.0-py3-none-any.whl",
    "libcusparse-dev @ file://./portable_wheels/libcusparse-dev-0.1.0-py3-none-any.whl",
    "libdeflate @ file://./portable_wheels/libdeflate-0.1.0-py3-none-any.whl",
    "libevent @ file://./portable_wheels/libevent-0.1.0-py3-none-any.whl",
    "libexpat @ file://./portable_wheels/libexpat-0.1.0-py3-none-any.whl",
    "libffi @ file://./portable_wheels/libffi-0.1.0-py3-none-any.whl",
    "libfreetype @ file://./portable_wheels/libfreetype-0.1.0-py3-none-any.whl",
    "libfreetype6 @ file://./portable_wheels/libfreetype6-0.1.0-py3-none-any.whl",
    "libglib @ file://./portable_wheels/libglib-0.1.0-py3-none-any.whl",
    "libgoogle-cloud @ file://./portable_wheels/libgoogle-cloud-0.1.0-py3-none-any.whl",
    "libgoogle-cloud-storage @ file://./portable_wheels/libgoogle-cloud-storage-0.1.0-py3-none-any.whl",
    "libgrpc @ file://./portable_wheels/libgrpc-0.1.0-py3-none-any.whl",
    "libhwy @ file://./portable_wheels/libhwy-0.1.0-py3-none-any.whl",
    "libiconv @ file://./portable_wheels/libiconv-0.1.0-py3-none-any.whl",
    "libintl @ file://./portable_wheels/libintl-0.1.0-py3-none-any.whl",
    "libjpeg-turbo @ file://./portable_wheels/libjpeg-turbo-0.1.0-py3-none-any.whl",
    "libjxl @ file://./portable_wheels/libjxl-0.1.0-py3-none-any.whl",
    "liblapack",
    "liblzma @ file://./portable_wheels/liblzma-0.1.0-py3-none-any.whl",
    "libmamba @ file://./portable_wheels/libmamba-0.1.0-py3-none-any.whl",
    "libmamba-spdlog @ file://./portable_wheels/libmamba-spdlog-0.1.0-py3-none-any.whl",
    "libmambapy @ file://./portable_wheels/libmambapy-0.1.0-py3-none-any.whl",
    "libnpp @ file://./portable_wheels/libnpp-0.1.0-py3-none-any.whl",
    "libnpp-dev @ file://./portable_wheels/libnpp-dev-0.1.0-py3-none-any.whl",
    "libnvfatbin @ file://./portable_wheels/libnvfatbin-0.1.0-py3-none-any.whl",
    "libnvfatbin-dev @ file://./portable_wheels/libnvfatbin-dev-0.1.0-py3-none-any.whl",
    "libnvjitlink @ file://./portable_wheels/libnvjitlink-0.1.0-py3-none-any.whl",
    "libnvjitlink-dev @ file://./portable_wheels/libnvjitlink-dev-0.1.0-py3-none-any.whl",
    "libnvjpeg @ file://./portable_wheels/libnvjpeg-0.1.0-py3-none-any.whl",
    "libnvjpeg-dev @ file://./portable_wheels/libnvjpeg-dev-0.1.0-py3-none-any.whl",
    "libogg @ file://./portable_wheels/libogg-0.1.0-py3-none-any.whl",
    "libopus @ file://./portable_wheels/libopus-0.1.0-py3-none-any.whl",
    "libparquet @ file://./portable_wheels/libparquet-0.1.0-py3-none-any.whl",
    "libpng @ file://./portable_wheels/libpng-0.1.0-py3-none-any.whl",
    "libprotobuf @ file://./portable_wheels/libprotobuf-0.1.0-py3-none-any.whl",
    "libre2-11 @ file://./portable_wheels/libre2-11-0.1.0-py3-none-any.whl",
    "librsvg @ file://./portable_wheels/librsvg-0.1.0-py3-none-any.whl",
    "libsentencepiece @ file://./portable_wheels/libsentencepiece-0.1.0-py3-none-any.whl",
    "libsodium",
    "libsolv @ file://./portable_wheels/libsolv-0.1.0-py3-none-any.whl",
    "libsqlite @ file://./portable_wheels/libsqlite-0.1.0-py3-none-any.whl",
    "libssh2",
    "libthrift @ file://./portable_wheels/libthrift-0.1.0-py3-none-any.whl",
    "libtiff",
    "libusb",
    "libutf8proc @ file://./portable_wheels/libutf8proc-0.1.0-py3-none-any.whl",
    "libuv @ file://./portable_wheels/libuv-0.1.0-py3-none-any.whl",
    "libvorbis @ file://./portable_wheels/libvorbis-0.1.0-py3-none-any.whl",
    "libvulkan-loader @ file://./portable_wheels/libvulkan-loader-0.1.0-py3-none-any.whl",
    "libwebp @ file://./portable_wheels/libwebp-0.1.0-py3-none-any.whl",
    "libwebp-base @ file://./portable_wheels/libwebp-base-0.1.0-py3-none-any.whl",
    "libxcb @ file://./portable_wheels/libxcb-0.1.0-py3-none-any.whl",
    "libxml2 @ file://./portable_wheels/libxml2-0.1.0-py3-none-any.whl",
    "libxml2-16 @ file://./portable_wheels/libxml2-16-0.1.0-py3-none-any.whl",
    "libxslt @ file://./portable_wheels/libxslt-0.1.0-py3-none-any.whl",
    "libzlib @ file://./portable_wheels/libzlib-0.1.0-py3-none-any.whl",
    "linkify-it-py",
    "llvm-openmp @ file://./portable_wheels/llvm-openmp-0.1.0-py3-none-any.whl",
    "lz4-c @ file://./portable_wheels/lz4-c-0.1.0-py3-none-any.whl",
    "lzo @ file://./portable_wheels/lzo-0.1.0-py3-none-any.whl",
    "m2w64-gcc-libgfortran @ file://./portable_wheels/m2w64-gcc-libgfortran-0.1.0-py3-none-any.whl",
    "m2w64-gcc-libs @ file://./portable_wheels/m2w64-gcc-libs-0.1.0-py3-none-any.whl",
    "m2w64-gcc-libs-core @ file://./portable_wheels/m2w64-gcc-libs-core-0.1.0-py3-none-any.whl",
    "m2w64-gmp @ file://./portable_wheels/m2w64-gmp-0.1.0-py3-none-any.whl",
    "m2w64-libwinpthread-git @ file://./portable_wheels/m2w64-libwinpthread-git-0.1.0-py3-none-any.whl",
    "markdown-it-py",
    "markupsafe",
    "matplotlib",
    "matplotlib-base @ file://./portable_wheels/matplotlib-base-0.1.0-py3-none-any.whl",
    "matplotlib-inline",
    "mdit-py-plugins",
    "mdurl",
    "menuinst",
    "mistune",
    "mkl",
    "msgpack-python",
    "msys2-conda-epoch @ file://./portable_wheels/msys2-conda-epoch-0.1.0-py3-none-any.whl",
    "multidict",
    "multiprocess",
    "munkres",
    "narwhals",
    "nbclient",
    "nbconvert",
    "nbconvert-core @ file://./portable_wheels/nbconvert-core-0.1.0-py3-none-any.whl",
    "nbconvert-pandoc @ file://./portable_wheels/nbconvert-pandoc-0.1.0-py3-none-any.whl",
    "nbformat",
    "nest-asyncio",
    "networkx",
    "nlohmann_json-abi @ file://./portable_wheels/nlohmann_json-abi-0.1.0-py3-none-any.whl",
    "nltk",
    "notebook",
    "notebook-shim",
    "numpy",
    "opencl-headers @ file://./portable_wheels/opencl-headers-0.1.0-py3-none-any.whl",
    "openh264 @ file://./portable_wheels/openh264-0.1.0-py3-none-any.whl",
    "openjpeg @ file://./portable_wheels/openjpeg-0.1.0-py3-none-any.whl",
    "optimum",
    "orc",
    "orjson",
    "overrides",
    "packaging",
    "pandas",
    "pandoc",
    "pandocfilters",
    "pango",
    "parso",
    "patsy",
    "pcre2",
    "pillow",
    "pixman @ file://./portable_wheels/pixman-0.1.0-py3-none-any.whl",
    "platformdirs",
    "pluggy",
    "prometheus_client",
    "prompt-toolkit",
    "prompt_toolkit",
    "propcache",
    "protobuf",
    "psutil",
    "pthread-stubs @ file://./portable_wheels/pthread-stubs-0.1.0-py3-none-any.whl",
    "pure_eval",
    "pyarrow-core @ file://./portable_wheels/pyarrow-core-0.1.0-py3-none-any.whl",
    "pybind11-abi @ file://./portable_wheels/pybind11-abi-0.1.0-py3-none-any.whl",
    "pycosat",
    "pycparser",
    "pycryptodome",
    "pydantic",
    "pydantic-core",
    "pydantic-extra-types",
    "pydantic-settings",
    "pydub",
    "pygments",
    "pyparsing",
    "pyperclip",
    "pyside6",
    "pysocks",
    "python-dateutil",
    "python-dotenv",
    "python-fastjsonschema @ file://./portable_wheels/python-fastjsonschema-0.1.0-py3-none-any.whl",
    "python-gil @ file://./portable_wheels/python-gil-0.1.0-py3-none-any.whl",
    "python-json-logger",
    "python-multipart",
    "python-slugify",
    "python-tzdata @ file://./portable_wheels/python-tzdata-0.1.0-py3-none-any.whl",
    "python-xxhash @ file://./portable_wheels/python-xxhash-0.1.0-py3-none-any.whl",
    "python_abi @ file://./portable_wheels/python_abi-0.1.0-py3-none-any.whl",
    "pytorch",
    "pytorch-cuda @ file://./portable_wheels/pytorch-cuda-0.1.0-py3-none-any.whl",
    "pytorch-mutex @ file://./portable_wheels/pytorch-mutex-0.1.0-py3-none-any.whl",
    "pytz",
    "pywin32",
    "pywinpty",
    "pyyaml",
    "pyzmq",
    "qhull @ file://./portable_wheels/qhull-0.1.0-py3-none-any.whl",
    "qt6-main @ file://./portable_wheels/qt6-main-0.1.0-py3-none-any.whl",
    "re2",
    "regex",
    "reproc @ file://./portable_wheels/reproc-0.1.0-py3-none-any.whl",
    "reproc-cpp @ file://./portable_wheels/reproc-cpp-0.1.0-py3-none-any.whl",
    "requests",
    "responses",
    "rfc3339-validator",
    "rfc3986-validator",
    "rfc3987-syntax",
    "rich",
    "rich-toolkit",
    "rpds-py",
    "ruamel.yaml",
    "ruamel.yaml.clib",
    "ruff",
    "safehttpx",
    "safetensors",
    "scikit-learn",
    "sdl2 @ file://./portable_wheels/sdl2-0.1.0-py3-none-any.whl",
    "sdl3",
    "seaborn",
    "seaborn-base",
    "semantic_version",
    "send2trash",
    "sentencepiece",
    "sentencepiece-python @ file://./portable_wheels/sentencepiece-python-0.1.0-py3-none-any.whl",
    "sentencepiece-spm @ file://./portable_wheels/sentencepiece-spm-0.1.0-py3-none-any.whl",
    "setproctitle",
    "setuptools",
    "shaderc @ file://./portable_wheels/shaderc-0.1.0-py3-none-any.whl",
    "shellingham",
    "simdjson @ file://./portable_wheels/simdjson-0.1.0-py3-none-any.whl",
    "six",
    "snappy",
    "sniffio",
    "soupsieve",
    "spdlog",
    "spirv-tools @ file://./portable_wheels/spirv-tools-0.1.0-py3-none-any.whl",
    "sqlite @ file://./portable_wheels/sqlite-0.1.0-py3-none-any.whl",
    "stack_data",
    "starlette",
    "statsmodels",
    "svt-av1 @ file://./portable_wheels/svt-av1-0.1.0-py3-none-any.whl",
    "tbb",
    "terminado",
    "text-unidecode",
    "threadpoolctl",
    "tinycss2",
    "tk",
    "tokenizers",
    "tomli",
    "tomlkit",
    "tornado",
    "tqdm",
    "traitlets",
    "transformers",
    "truststore",
    "typer",
    "typer-slim",
    "typing-extensions",
    "typing-inspection",
    "typing_extensions",
    "typing_utils",
    "tzdata",
    "uc-micro-py",
    "ucrt @ file://./portable_wheels/ucrt-0.1.0-py3-none-any.whl",
    "unicodedata2",
    "uri-template",
    "urllib3",
    "uvicorn",
    "uvicorn-standard @ file://./portable_wheels/uvicorn-standard-0.1.0-py3-none-any.whl",
    "vc14_runtime @ file://./portable_wheels/vc14_runtime-0.1.0-py3-none-any.whl",
    "vcomp14 @ file://./portable_wheels/vcomp14-0.1.0-py3-none-any.whl",
    "watchfiles",
    "wcwidth",
    "webcolors",
    "webencodings",
    "websocket-client",
    "websockets",
    "wheel",
    "widgetsnbextension",
    "win_inet_pton",
    "winpty @ file://./portable_wheels/winpty-0.1.0-py3-none-any.whl",
    "x264 @ file://./portable_wheels/x264-0.1.0-py3-none-any.whl",
    "x265 @ file://./portable_wheels/x265-0.1.0-py3-none-any.whl",
    "xonsh",
    "xorg-libxau @ file://./portable_wheels/xorg-libxau-0.1.0-py3-none-any.whl",
    "xorg-libxdmcp @ file://./portable_wheels/xorg-libxdmcp-0.1.0-py3-none-any.whl",
    "xxhash",
    "yaml @ file://./portable_wheels/yaml-0.1.0-py3-none-any.whl",
    "yaml-cpp @ file://./portable_wheels/yaml-cpp-0.1.0-py3-none-any.whl",
    "yarl",
    "zeromq @ file://./portable_wheels/zeromq-0.1.0-py3-none-any.whl",
    "zipp",
    "zlib @ file://./portable_wheels/zlib-0.1.0-py3-none-any.whl",
    "zstd",
    { pip = "appdirs==1.4.4" },
    { pip = "argparse==1.4.0" },
    { pip = "authlib==1.6.6" },
    { pip = "backports-tarfile==1.2.0" },
    { pip = "beartype==0.22.9" },
    { pip = "blinker==1.9.0" },
    { pip = "build==1.4.0" },
    { pip = "cachecontrol==0.14.4" },
    { pip = "cachetools==6.2.4" },
    { pip = "click-default-group==1.2.4" },
    { pip = "cloudpickle==3.1.2" },
    { pip = "conda-lock==4.0.0" },
    { pip = "conda2pyproj==0.1.6" },
    { pip = "crashtest==0.4.1" },
    { pip = "cryptography==46.0.3" },
    { pip = "cyclopts==4.4.3" },
    { pip = "diskcache==5.6.3" },
    { pip = "distlib==0.4.0" },
    { pip = "docstring-parser==0.17.0" },
    { pip = "docutils==0.22.4" },
    { pip = "dulwich==0.24.10" },
    { pip = "ensureconda==1.6.0" },
    { pip = "fakeredis==2.33.0" },
    { pip = "fastmcp==2.14.2" },
    { pip = "flask==3.1.2" },
    { pip = "gitdb==4.0.12" },
    { pip = "gitpython==3.1.46" },
    { pip = "greenlet==3.3.0" },
    { pip = "htb-ai-library==0.4.0" },
    { pip = "httpx-sse==0.4.3" },
    { pip = "installer==0.7.0" },
    { pip = "itsdangerous==2.2.0" },
    { pip = "jaraco-classes==3.4.0" },
    { pip = "jaraco-context==6.0.2" },
    { pip = "jaraco-functools==4.4.0" },
    { pip = "jsonschema-path==0.3.4" },
    { pip = "keyring==25.7.0" },
    { pip = "lupa==2.6" },
    { pip = "mcp==1.25.0" },
    { pip = "more-itertools==10.8.0" },
    { pip = "mpmath==1.3.0" },
    { pip = "opacus==1.5.4" },
    { pip = "openapi-pydantic==0.5.1" },
    { pip = "opentelemetry-api==1.39.1" },
    { pip = "opentelemetry-exporter-prometheus==0.60b1" },
    { pip = "opentelemetry-instrumentation==0.60b1" },
    { pip = "opentelemetry-sdk==1.39.1" },
    { pip = "opentelemetry-semantic-conventions==0.60b1" },
    { pip = "opt-einsum==3.4.0" },
    { pip = "pathable==0.4.4" },
    { pip = "pathvalidate==3.3.1" },
    { pip = "pkginfo==1.12.1.2" },
    { pip = "playwright==1.57.0" },
    { pip = "py-key-value-aio==0.3.0" },
    { pip = "py-key-value-shared==0.3.0" },
    { pip = "pyarrow==23.0.1" },
    { pip = "pydocket==0.16.3" },
    { pip = "pyee==13.0.0" },
    { pip = "pyjwt==2.10.1" },
    { pip = "pyproject-hooks==1.2.0" },
    { pip = "pywin32-ctypes==0.2.3" },
    { pip = "redis==7.1.0" },
    { pip = "referencing==0.36.2" },
    { pip = "requests-toolbelt==1.0.0" },
    { pip = "rich-rst==1.3.2" },
    { pip = "ruamel-yaml==0.19.1" },
    { pip = "scipy==1.17.1" },
    { pip = "semver==3.0.4" },
    { pip = "smmap==5.0.2" },
    { pip = "sortedcontainers==2.4.0" },
    { pip = "sse-starlette==3.1.2" },
    { pip = "sympy==1.13.1" },
    { pip = "tomli-w==1.2.0" },
    { pip = "torchaudio==2.5.1" },
    { pip = "torchvision==0.20.1" },
    { pip = "trove-classifiers==2026.1.14.14" },
    { pip = "unidep==2.1.0" },
    { pip = "virtualenv==20.39.1" },
    { pip = "werkzeug==3.1.5" },
    { pip = "wrapt==1.17.3" },
    { pip = "zstandard==0.25.0" },
]

[build-system]
requires = [
    "setuptools",
    "unidep",
    "tomli-w",
    "pyyaml",
]
build-backend = "build_hooks"
backend-path = [
    ".",
]
