[project]
name = "mcpenum"
version = "0.1.4"
description = "MCP server enumeration tool"
dynamic = [
    "dependencies",
]
requires-python = ">=3.11"

[tool.unidep]
channels = [
    "pytorch",
    "nvidia",
    "conda-forge",
    "defaults",
]
dependencies = [
    "accelerate",
    "aiofiles",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "altair",
    "annotated-doc",
    "annotated-types",
    "anyio",
    "archspec",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "arrow",
    "asttokens",
    "async-lru",
    "attrs",
    "aws-c-http",
    "babel",
    "backports.zstd",
    "beautifulsoup4",
    "binaryornot",
    "bleach",
    "boltons",
    "brotli",
    "cached-property",
    "cached_property",
    "category_encoders",
    "certifi",
    "cffi",
    "chardet",
    "charset-normalizer",
    "click",
    "colorama",
    "comm",
    "conda-package-handling",
    "conda-package-streaming",
    "conda-press",
    "contourpy",
    "cookiecutter",
    "cuda-cccl",
    "cycler",
    "dataclasses",
    "datasets",
    "debugpy",
    "decorator",
    "defusedxml",
    "dill",
    "distro",
    "dnspython",
    "email-validator",
    "email_validator",
    "evaluate",
    "exceptiongroup",
    "executing",
    "expat",
    "fastapi",
    "fastapi-cli",
    "fastapi-core",
    "ffmpeg",
    "ffmpy",
    "filelock",
    "fmt",
    "fontconfig",
    "fonttools",
    "fqdn",
    "freetype",
    "frozendict",
    "frozenlist",
    "fsspec",
    "gradio",
    "gradio-client",
    "graphite2",
    "h11",
    "h2",
    "hf-xet",
    "hpack",
    "httpcore",
    "httptools",
    "httpx",
    "huggingface_hub",
    "hyperframe",
    "icu",
    "idna",
    "importlib-metadata",
    "importlib_resources",
    "intel-openmp",
    "ipykernel",
    "ipython",
    "ipython_pygments_lexers",
    "ipywidgets",
    "isoduration",
    "jedi",
    "jinja2",
    "joblib",
    "json5",
    "jsonpatch",
    "jsonpointer",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter",
    "jupyter-lsp",
    "jupyter_client",
    "jupyter_console",
    "jupyter_core",
    "jupyter_events",
    "jupyter_server",
    "jupyter_server_terminals",
    "jupyterlab",
    "jupyterlab_pygments",
    "jupyterlab_server",
    "jupyterlab_widgets",
    "kiwisolver",
    "krb5",
    "lark",
    "lazyasd",
    "lerc",
    "libarchive",
    "liblapack",
    "libsodium",
    "libssh2",
    "libtiff",
    "libusb",
    "linkify-it-py",
    "markdown-it-py",
    "markupsafe",
    "matplotlib",
    "matplotlib-inline",
    "mdit-py-plugins",
    "mdurl",
    "menuinst",
    "mistune",
    "mkl",
    "msgpack-python",
    "multidict",
    "multiprocess",
    "munkres",
    "narwhals",
    "nbclient",
    "nbconvert",
    "nbformat",
    "nest-asyncio",
    "networkx",
    "nltk",
    "notebook",
    "notebook-shim",
    "numpy",
    "optimum",
    "orc",
    "orjson",
    "overrides",
    "packaging",
    "pandas",
    "pandoc",
    "pandocfilters",
    "pango",
    "parso",
    "patsy",
    "pcre2",
    "pillow",
    "platformdirs",
    "pluggy",
    "prometheus_client",
    "prompt-toolkit",
    "prompt_toolkit",
    "propcache",
    "protobuf",
    "psutil",
    "pure_eval",
    "pycosat",
    "pycparser",
    "pycryptodome",
    "pydantic",
    "pydantic-core",
    "pydantic-extra-types",
    "pydantic-settings",
    "pydub",
    "pygments",
    "pyparsing",
    "pyperclip",
    "pyside6",
    "pysocks",
    "python-dateutil",
    "python-dotenv",
    "python-json-logger",
    "python-multipart",
    "python-slugify",
    "pytorch",
    "pytz",
    "pywin32",
    "pywinpty",
    "pyyaml",
    "pyzmq",
    "re2",
    "regex",
    "requests",
    "responses",
    "rfc3339-validator",
    "rfc3986-validator",
    "rfc3987-syntax",
    "rich",
    "rich-toolkit",
    "rpds-py",
    "ruamel.yaml",
    "ruamel.yaml.clib",
    "ruff",
    "safehttpx",
    "safetensors",
    "scikit-learn",
    "sdl3",
    "seaborn",
    "seaborn-base",
    "semantic_version",
    "send2trash",
    "sentencepiece",
    "setproctitle",
    "setuptools",
    "shellingham",
    "six",
    "snappy",
    "sniffio",
    "soupsieve",
    "spdlog",
    "stack_data",
    "starlette",
    "statsmodels",
    "tbb",
    "terminado",
    "text-unidecode",
    "threadpoolctl",
    "tinycss2",
    "tk",
    "tokenizers",
    "tomli",
    "tomlkit",
    "tornado",
    "tqdm",
    "traitlets",
    "transformers",
    "truststore",
    "typer",
    "typer-slim",
    "typing-extensions",
    "typing-inspection",
    "typing_extensions",
    "typing_utils",
    "tzdata",
    "uc-micro-py",
    "unicodedata2",
    "uri-template",
    "urllib3",
    "uvicorn",
    "watchfiles",
    "wcwidth",
    "webcolors",
    "webencodings",
    "websocket-client",
    "websockets",
    "wheel",
    "widgetsnbextension",
    "win_inet_pton",
    "xonsh",
    "xxhash",
    "yarl",
    "zipp",
    "zstd",
    { pip = "appdirs==1.4.4" },
    { pip = "argparse==1.4.0" },
    { pip = "authlib==1.6.6" },
    { pip = "backports-tarfile==1.2.0" },
    { pip = "beartype==0.22.9" },
    { pip = "blinker==1.9.0" },
    { pip = "build==1.4.0" },
    { pip = "cachecontrol==0.14.4" },
    { pip = "cachetools==6.2.4" },
    { pip = "click-default-group==1.2.4" },
    { pip = "cloudpickle==3.1.2" },
    { pip = "conda-lock==4.0.0" },
    { pip = "conda2pyproj==0.1.7" },
    { pip = "crashtest==0.4.1" },
    { pip = "cryptography==46.0.3" },
    { pip = "cyclopts==4.4.3" },
    { pip = "diskcache==5.6.3" },
    { pip = "distlib==0.4.0" },
    { pip = "docstring-parser==0.17.0" },
    { pip = "docutils==0.22.4" },
    { pip = "dulwich==0.24.10" },
    { pip = "ensureconda==1.6.0" },
    { pip = "fakeredis==2.33.0" },
    { pip = "fastmcp==2.14.2" },
    { pip = "flask==3.1.2" },
    { pip = "gitdb==4.0.12" },
    { pip = "gitpython==3.1.46" },
    { pip = "greenlet==3.3.0" },
    { pip = "htb-ai-library==0.4.0" },
    { pip = "httpx-sse==0.4.3" },
    { pip = "installer==0.7.0" },
    { pip = "itsdangerous==2.2.0" },
    { pip = "jaraco-classes==3.4.0" },
    { pip = "jaraco-context==6.0.2" },
    { pip = "jaraco-functools==4.4.0" },
    { pip = "jsonschema-path==0.3.4" },
    { pip = "keyring==25.7.0" },
    { pip = "lupa==2.6" },
    { pip = "mcp==1.25.0" },
    { pip = "more-itertools==10.8.0" },
    { pip = "mpmath==1.3.0" },
    { pip = "opacus==1.5.4" },
    { pip = "openapi-pydantic==0.5.1" },
    { pip = "opentelemetry-api==1.39.1" },
    { pip = "opentelemetry-exporter-prometheus==0.60b1" },
    { pip = "opentelemetry-instrumentation==0.60b1" },
    { pip = "opentelemetry-sdk==1.39.1" },
    { pip = "opentelemetry-semantic-conventions==0.60b1" },
    { pip = "opt-einsum==3.4.0" },
    { pip = "pathable==0.4.4" },
    { pip = "pathvalidate==3.3.1" },
    { pip = "pkginfo==1.12.1.2" },
    { pip = "playwright==1.57.0" },
    { pip = "py-key-value-aio==0.3.0" },
    { pip = "py-key-value-shared==0.3.0" },
    { pip = "pyarrow==23.0.1" },
    { pip = "pydocket==0.16.3" },
    { pip = "pyee==13.0.0" },
    { pip = "pyjwt==2.10.1" },
    { pip = "pyproject-hooks==1.2.0" },
    { pip = "pywin32-ctypes==0.2.3" },
    { pip = "redis==7.1.0" },
    { pip = "referencing==0.36.2" },
    { pip = "requests-toolbelt==1.0.0" },
    { pip = "rich-rst==1.3.2" },
    { pip = "ruamel-yaml==0.19.1" },
    { pip = "scipy==1.17.1" },
    { pip = "semver==3.0.4" },
    { pip = "smmap==5.0.2" },
    { pip = "sortedcontainers==2.4.0" },
    { pip = "sse-starlette==3.1.2" },
    { pip = "sympy==1.13.1" },
    { pip = "tomli-w==1.2.0" },
    { pip = "torchaudio==2.5.1" },
    { pip = "torchvision==0.20.1" },
    { pip = "trove-classifiers==2026.1.14.14" },
    { pip = "unidep==2.1.0" },
    { pip = "virtualenv==20.39.1" },
    { pip = "werkzeug==3.1.5" },
    { pip = "wrapt==1.17.3" },
    { pip = "zstandard==0.25.0" },
]

[build-system]
requires = [
    "setuptools",
    "unidep",
    "tomli-w",
    "pyyaml",
]
build-backend = "build_hooks"
backend-path = [
    ".",
]
